--- a/src/components/data-table/DataTable.module.scss
+++ b/src/components/data-table/DataTable.module.scss
@@ -3,6 +3,11 @@
     border-radius: 8px !important;
 
     .dataTable {
+        .tableBody {
+            .rowDataDisabled {
+                color: grey;
+            }
+        }
         .disable {
             filter: grayscale(1);
             pointer-events: none;
